--- a/Alirio Martinez/index.html
+++ b/Alirio Martinez/index.html
@@ -113,7 +113,7 @@
            <h3>Redes Sociales</h3>
           <ul>
              <li><a href="https://www.facebook.com/verk45" target="_blank" > <i class="fab fa-facebook-square"></i> Facebook </a></li><br>
-             <li>Correo Electronico:</li>
+             <li><i class="fas fa-envelope-square"></i>Correo Electronico:</li>
              <p>aliriomartinez70@gmail.com</p>
           </ul>
         
